# hifiyaml

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
docs/: user_guide.md
hifiyaml/: core.py
tests/: operate.py  test.sh  test_hifiyaml.py
tests/ref/: 0.yaml  1.yaml  2_0.yaml  3.yaml  4.yaml  5.yaml  6.yaml  Halo.yaml  drop.yaml  keyError.yaml  new_bec.yaml  obsOperator.yaml
