[project]
name = "hifiyaml"
version = "0.1.8"
description = "High-fidelity WYSIWYG YAML parser and emitter that preserves exact formatting"
readme = "README.md"
authors = [
    { name="Guoqing Ge", email="Guoqing.Ge@noaa.gov" }
]
license-files = ["LICENSE"]
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/hifiyaml/hifiyaml/wiki"
Source = "https://github.com/hifiyaml/hifiyaml"
Tracker = "https://github.com/hifiyaml/hifiyaml/issues"
